--- a/personal.html
+++ b/personal.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" href="images/favicon.ico">
 	<link rel="stylesheet" href="css/html5reset.css">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="css/style.css">
 	<title>Family Page</title>
 </head>
 <body>
@@ -18,7 +18,7 @@
 			<li><a href = "si.umich.edu">UMSI</a></li>
 		</ul>
 	</nav>
-	</header>
+</header>
 
 	<h1>Family</h1>
 	
@@ -26,7 +26,7 @@
 	<p>In 2016 I loaded my kids into the minivan and took them on a drive across the Northern midwest states.  We went to Wisconsin Dells, the Badlands, Mount Rushmore, Jewel Cave, and Custer State Park.<br>
 		<img src = "images/wisconsin_dells.jpg" width="25" alt = ""/>
 		<img src = "images/badlands.jpg" width="1000" alt = ""/>
-		<img scr = "images/falling.jpg" width="25" alt = ""/>
+		<img src = "images/falling.jpg" width="25" alt = ""/>
 		<img src = "images/jewel_cave.jpg" width="1000" alt = ""/>
 		<img src = "images/rushmore.jpg" width="25" alt = ""/>
 	</main>
