--- a/personal.html
+++ b/personal.html
@@ -10,14 +10,15 @@
 </head>
 <body>
 	<header>
-	  <nav>
-		<ul>
-			<li><a href = "index.html">About Me</a></li>
-			<li><a href = "personal.html">Family</a></li>
-			<li><a href = "random.html">Random</a></li>
-			<li><a href = "si.umich.edu">UMSI</a></li>
-		</ul>
-	</nav>
+		<nav>
+			<ul>
+				<!-- Since I am on the index file I added class = action to the link to index. -->
+				<li class="active"><a href = "index.html" >About Me</a></li>
+				<li><a href = "personal.html">My Family</a></li>
+				<li><a href = "random.html">Random</a></li>
+				<li><a href = "http://www.si.umich.edu">UMSI</a></li>
+			</ul>
+		</nav>
 </header>
 
 	<h1>Family</h1>
@@ -27,10 +28,12 @@
 		<img src = "images/wisconsin_dells.jpg" width="25" alt = ""/>
 		<img src = "images/badlands.jpg" width="1000" alt = ""/>
 		<img src = "images/falling.jpg" width="25" alt = ""/>
-		<img src = "images/jewel_cave.jpg" width="1000" alt = ""/>
+		<img src = "images/jewel_cave.JPG" width="1000" alt = ""/>
 		<img src = "images/rushmore.jpg" width="25" alt = ""/>
 	</main>
-	Colleen van Lent &copy; 2020
+	<footer>
+		<p>Colleen van Lent &copy; 2020</p>
+	</footer>
 </body>
 </html>
 
