--- a/personal.html
+++ b/personal.html
@@ -19,21 +19,22 @@
 				<li><a href = "http://www.si.umich.edu">UMSI</a></li>
 			</ul>
 		</nav>
+	 <h1>Family</h1>
 </header>
 
-	<h1>Family</h1>
+
 	
-	<main>
+<main>
 	<p>In 2016 I loaded my kids into the minivan and took them on a drive across the Northern midwest states.  We went to Wisconsin Dells, the Badlands, Mount Rushmore, Jewel Cave, and Custer State Park.<br>
-		<img src = "images/wisconsin_dells.jpg" width="25" alt = ""/>
-		<img src = "images/badlands.jpg" width="1000" alt = ""/>
-		<img src = "images/falling.jpg" width="25" alt = ""/>
-		<img src = "images/jewel_cave.JPG" width="1000" alt = ""/>
-		<img src = "images/rushmore.jpg" width="25" alt = ""/>
-	</main>
-	<footer>
-		<p>Colleen van Lent &copy; 2020</p>
-	</footer>
+		<img src = "images/wisconsin_dells.jpg" width="25" alt = "wisconsin dell"/>
+		<img src = "images/badlands.jpg" width="1000" alt = "badlands"/>
+		<img src = "images/falling.jpg" width="25" alt = "falling"/>
+		<img src = "images/jewel_cave.JPG" width="1000" alt = "jewel cave"/>
+		<img src = "images/rushmore.jpg" width="25" alt = "Rushmore"/>
+</main>
+<footer>
+	<p>Colleen van Lent &copy; 2020</p>
+</footer>
 </body>
 </html>
 
